--- a/Blog/Views/Account/Register.cshtml
+++ b/Blog/Views/Account/Register.cshtml
@@ -8,6 +8,10 @@
 
 <h4>RegisterVM</h4>
 <hr />
+@if (ViewData["Message"] != null)
+{
+    <h3>@ViewData["Message"]</h3>
+}
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Register">
