--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 				</ul>
 
 				<div class="my-2 my-md-3">
-					<a class="btn btn-primary" href="https://themes.3rdwavemedia.com/" target="_blank">Get in Touch</a>
+					<a class="btn btn-primary" href="https://www.google.com/" target="_blank">Search Google</a>
 				</div>
 			</div>
 		</nav>
