--- a/Blog/Views/Home/Index.cshtml
+++ b/Blog/Views/Home/Index.cshtml
@@ -105,9 +105,9 @@
 							<div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">2 min read</span><span class="comment"><a href="#">1 comment</a></span></div>
 							<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
 							<a class="more-link" href="/Home/BlogPost">Read more &rarr;</a>
-						</div><!--//media-body-->
-					</div><!--//media-->
-				</div><!--//item-->
+						</div>
+					</div>
+				</div>
 
 				<nav class="blog-nav nav nav-justified my-5">
 					<a class="nav-link-prev nav-item nav-link d-none rounded-left" href="/Home/BlogList">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
@@ -119,13 +119,13 @@
 
 		<footer class="footer text-center py-2 theme-bg-dark">
 
-			<!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-			<small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="github.com/TeamGrogu" target="_blank">Team Overthinkers</a> for developers</small>
+		
+			<small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a href="http://github.com/TeamGrogu" target="_blank">Team Overthinkers</a> for developers</small>
 
 		</footer>
 
-	</div><!--//main-wrapper-->
-	<!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)****** -->
+	</div>
+
 	<div id="config-panel" class="config-panel d-none d-lg-block">
 		<div class="panel-inner">
 			<a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i class="fas fa-cog fa-spin mx-auto" data-fa-transform="down-6"></i></a>
@@ -141,14 +141,14 @@
 				<li class="theme-8  list-inline-item"><a data-style="~/css/theme-8.css" href="#"></a></li>
 			</ul>
 			<a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-		</div><!--//panel-inner-->
-	</div><!--//configure-panel-->
-	<!-- Javascript -->
+		</div>
+	</div>
+
 	<script src="~/js/jquery-3.3.1.min.js"></script>
 	<script src="~/js/popper.min.js"></script>
 	<script src="~/js/bootstrap.min.js"></script>
 
-	<!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
+
 	<script src="~/js/style-switcher.js"></script>
 
 
