--- a/Blog/Views/Account/ForgotPassword.cshtml
+++ b/Blog/Views/Account/ForgotPassword.cshtml
@@ -1,13 +1,6 @@
 ﻿@model LoginVM
-@{
-	Layout = null;
-}
 
-<link rel="stylesheet" href="~/css/register.css">
-
-<partial name="~/Views/Shared/NavBarPartialView.cshtml" />
-
-@if (ViewData["Message"] != null)
+@if (TempData["Message"] != null)
 {
-	<h3 style="color:orangered;"><i>@ViewData["Message"]</i></h3>
+	<h3 style="color:orangered;"><i>@TempData["Message"]</i></h3>
 }
