--- a/Blog/Views/Home/About.cshtml
+++ b/Blog/Views/Home/About.cshtml
@@ -23,7 +23,7 @@
 <body>
 
 	<header class="header text-center">
-		<h1 class="blog-name pt-lg-4 mb-0"><a href="/Home/Index">Anthony's Blog</a></h1>
+		<h1 class="blog-name pt-lg-4 mb-0"><a href="/Home/Index">Overthinker's Blog</a></h1>
 
 		<nav class="navbar navbar-expand-lg navbar-dark">
 
