--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<header class="header text-center">
-		<h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Anthony's Blog</a></h1>
+		<h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">Overthinker's Blog</a></h1>
 
 		<nav class="navbar navbar-expand-lg navbar-dark">
 
