--- a/Blog/Views/Home/BlogPost.cshtml
+++ b/Blog/Views/Home/BlogPost.cshtml
@@ -4,6 +4,8 @@
 	<title>BLOG</title>
 
 	<!-- Meta -->
+	@Model MakaleVM
+	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,9 +38,9 @@
 
 			<div id="navigation" class="collapse navbar-collapse flex-column">
 				<div class="profile-section pt-3 pt-lg-0">
-					<img class="profile-image mb-3 rounded-circle mx-auto" src="~/images/profile.png" alt="image">
+					<img class="profile-image mb-3 rounded-circle mx-auto" src="@Model.Makale.MakaleImage" alt="image">
 
-					<div class="bio mb-3">Hi, my name is Anthony Doe. Briefly introduce yourself here. You can also provide a link to the about page.<br><a href="/Home/About">Find out more about me</a></div><!--//bio-->
+					<div class="bio mb-3"><br><a href="/Home/About">Find out more about me</a></div><!--//bio-->
 					<ul class="social-list list-inline py-3 mx-auto">
 						<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
 						<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
@@ -52,9 +54,6 @@
 				<ul class="navbar-nav flex-column text-left">
 					<li class="nav-item">
 						<a class="nav-link" href="/Home/Index"><i class="fas fa-home fa-fw mr-2"></i>Blog Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="/Home/BlogPost"><i class="fas fa-bookmark fa-fw mr-2"></i>Blog Post</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/Home/About"><i class="fas fa-user fa-fw mr-2"></i>About Me</a>
@@ -75,102 +74,12 @@
 		<article class="blog-post px-3 py-5 p-md-5">
 			<div class="container">
 				<header class="blog-post-header">
-					<h2 class="title mb-2">Why Every Developer Should Have A Blog</h2>
+					<h2 class="title mb-2">@Model.Makale.Baslik</h2>
 					<div class="meta mb-3"><span class="date">Published 3 months ago</span><span class="time">5 min read</span><span class="comment"><a href="#">4 comments</a></span></div>
 				</header>
 
 				<div class="blog-post-body">
-					<figure class="blog-banner">
-						<a href="https://made4dev.com"><img class="img-fluid" src="~/images/blog/blog-post-banner.jpg" alt="image"></a>
-						<figcaption class="mt-2 text-center image-caption">Image Credit: <a href="https://made4dev.com?ref=devblog" target="_blank">made4dev.com (Premium Programming T-shirts)</a></figcaption>
-					</figure>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. </p>
-
-					<h3 class="mt-5 mb-3">Code Block Example</h3>
-					<p>You can get more info at <a href="https://highlightjs.org/" target="_blank">https://highlightjs.org/</a>. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. </p>
-					<pre>
-					<code>
-function $initHighlight(block, cls) {
-  try {
-	if (cls.search(/\bno\-highlight\b/) != -1)
-	  return process(block, true, 0x0F) +
-			 ` class="${cls}"`;
-  } catch (e) {
-	/* handle exception */
-  }
-  for (var i = 0 / 2; i < classes.length; i++) {
-	if (checkCondition(classes[i]) === undefined)
-	  console.log('undefined');
-  }
-}
-
-export  $initHighlight;
-						</code>
-					</pre>
-					<h3 class="mt-5 mb-3">Typography</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-					<h5 class="my-3">Bullet Points:</h5>
-					<ul class="mb-5">
-						<li class="mb-2">Lorem ipsum dolor sit amet consectetuer.</li>
-						<li class="mb-2">Aenean commodo ligula eget dolor.</li>
-						<li class="mb-2">Aenean massa cum sociis natoque penatibus.</li>
-					</ul>
-					<ol class="mb-5">
-						<li class="mb-2">Lorem ipsum dolor sit amet consectetuer.</li>
-						<li class="mb-2">Aenean commodo ligula eget dolor.</li>
-						<li class="mb-2">Aenean massa cum sociis natoque penatibus.</li>
-					</ol>
-					<h5 class="my-3">Quote Example:</h5>
-					<blockquote class="blockquote m-lg-5 py-3 pl-4 px-lg-5">
-						<p class="mb-2">You might not think that programmers are artists, but programming is an extremely creative profession. It's logic-based creativity.</p>
-						<footer class="blockquote-footer">John Romero</footer>
-					</blockquote>
-
-					<h5 class="my-3">Table Example:</h5>
-					<table class="table table-striped my-5">
-						<thead>
-							<tr>
-								<th scope="col">#</th>
-								<th scope="col">First</th>
-								<th scope="col">Last</th>
-								<th scope="col">Handle</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">1</th>
-								<td>Mark</td>
-								<td>Otto</td>
-								@*<td>@mdo</td>*@
-							</tr>
-							<tr>
-								<th scope="row">2</th>
-								<td>Jacob</td>
-								<td>Thornton</td>
-								@*<td>@fat</td>*@
-							</tr>
-							<tr>
-								<th scope="row">3</th>
-								<td>Larry</td>
-								<td>the Bird</td>
-							@*	<td>@twitter</td>*@
-							</tr>
-						</tbody>
-					</table>
-
-					<h5 class="mb-3">Embed A Tweet:</h5>
-
-					<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">1969:<br>-what&#39;re you doing with that 2KB of RAM?<br>-sending people to the moon<br><br>2017:<br>-what&#39;re you doing with that 1.5GB of RAM?<br>-running Slack</p>&mdash; I Am Devloper (@*@iamdevloper*@) <a href="https://twitter.com/iamdevloper/status/926458505355235328?ref_src=twsrc%5Etfw">November 3, 2017</a></blockquote>
-					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
-
-					<h3 class="mt-5 mb-3">Video Example</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. </p>
-
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/hnCmSXCZEpU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
+					<p>@Model.Makale.Icerik</p>
 
 				</div>
 
