--- a/Blog/Views/Home/Index.cshtml
+++ b/Blog/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model MakaleVM
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>BLOG</title>
@@ -24,91 +26,25 @@
 	
 
 	<div class="main-wrapper">
-		<section class="cta-section theme-bg-light py-5">
-			<div class="container text-center">
-				<h2 class="heading">DevBlog - A Blog Template Made For Developers</h2>
-				<div class="intro">Welcome to my blog. Subscribe and get my latest blog post in your inbox.</div>
-				<form class="signup-form form-inline justify-content-center pt-3">
-					<div class="form-group">
-						<label class="sr-only" for="semail">Your email</label>
-						<input type="email" id="semail" name="semail1" class="form-control mr-md-1 semail" placeholder="Enter email">
-					</div>
-					<button type="submit" class="btn btn-primary">Subscribe</button>
-				</form>
-			</div><!--//container-->
-		</section>
 		<section class="blog-list px-3 py-5 p-md-5">
 			<div class="container">
-				<div class="item mb-5">
-					<div class="media">
-						<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="~/images/blog/blog-post-thumb-1.jpg" alt="image">
-						<div class="media-body">
-							<h3 class="title mb-1"><a href="/Home/BlogPost">Why Every Developer Should Have A Blog</a></h3>
-							<div class="meta mb-1"><span class="date">Published 2 days ago</span><span class="time">5 min read</span><span class="comment"><a href="#">8 comments</a></span></div>
-							<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-							<a class="more-link" href="/Home/BlogPost">Read more &rarr;</a>
-						</div><!--//media-body-->
-					</div><!--//media-->
-				</div><!--//item-->
-				<div class="item mb-5">
-					<div class="media">
-						<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="~/images/blog/blog-post-thumb-2.jpg" alt="image">
-						<div class="media-body">
-							<h3 class="title mb-1"><a href="/Home/BlogPost">A Guide to Becoming a Full-Stack Developer</a></h3>
-							<div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">3 min read</span><span class="comment"><a href="#">26 comments</a></span></div>
-							<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-							<a class="more-link" href="/Home/BlogPost">Read more &rarr;</a>
-						</div><!--//media-body-->
-					</div><!--//media-->
-				</div><!--//item-->
-
-				<div class="item mb-5">
-					<div class="media">
-						<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="~/images/blog/blog-post-thumb-3.jpg" alt="image">
-						<div class="media-body">
-							<h3 class="title mb-1"><a href="/Home/BlogPost">High Performance JavaScript</a></h3>
-							<div class="meta mb-1"><span class="date">Published 1 month ago</span><span class="time">8 min read</span><span class="comment"><a href="#">12 comments</a></span></div>
-							<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-							<a class="more-link" href="/Home/BlogPost">Read more &rarr;</a>
-						</div><!--//media-body-->
-					</div><!--//media-->
-				</div><!--//item-->
-				<div class="item mb-5">
-					<div class="media">
-						<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="~/images/blog/blog-post-thumb-4.jpg" alt="image">
-						<div class="media-body">
-							<h3 class="title mb-1"><a href="/Home/BlogPost">Top 5 JavaScript Frameworks</a></h3>
-							<div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">15 min read</span><span class="comment"><a href="#">3 comments</a></span></div>
-							<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-							<a class="more-link" href="/Home/BlogPost">Read more &rarr;</a>
-						</div><!--//media-body-->
-					</div><!--//media-->
-				</div><!--//item-->
-
-				<div class="item mb-5">
-					<div class="media">
-						<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="~/images/blog/blog-post-thumb-5.jpg" alt="image">
-						<div class="media-body">
-							<h3 class="title mb-1"><a href="/Home/BlogPost">Learn React in 24 Hours</a></h3>
-							<div class="meta mb-1"><span class="date">Published 2 months ago</span><span class="time">10 min read</span><span class="comment"><a href="#">23 comments</a></span></div>
-							<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-							<a class="more-link" href="/Home/BlogPost">Read more &rarr;</a>
-						</div><!--//media-body-->
-					</div><!--//media-->
-				</div><!--//item-->
-
-				<div class="item">
-					<div class="media">
-						<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="~/images/blog/blog-post-thumb-6.jpg" alt="image">
-						<div class="media-body">
-							<h3 class="title mb-1"><a href="/Home/BlogPost">About Remote Working</a></h3>
-							<div class="meta mb-1"><span class="date">Published 3 months ago</span><span class="time">2 min read</span><span class="comment"><a href="#">1 comment</a></span></div>
-							<div class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies...</div>
-							<a class="more-link" href="/Home/BlogPost">Read more &rarr;</a>
-						</div>
+				@foreach (var item in Model.Makaleler)
+				{
+					<div class="item mb-5">
+						<div class="media">
+							@if(item.MakaleImage != null)
+							{
+								<img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="@item.MakaleImage" alt="image">
+							}
+							<div class="media-body">
+								<h3 class="title mb-1"><a asp-controller="Home" asp-action="BlogPost" asp-route-id="@item.ID">@item.Baslik</a></h3>
+								<div class="meta mb-1"><span class="date">Published @(DateTime.Now.Day-item.CreateDate.Value.Day) days ago</span><span class="time">5 min read</span></div>
+								<div class="intro">@item.Icerik</div>
+								<a asp-controller="Home" asp-action="BlogPost" asp-route-id="@item.ID" class="more-link">Read more &rarr;</a>
+							</div><!--//media-body-->
+						</div><!--//media-->
 					</div>
-				</div>
-
+				}
 				<nav class="blog-nav nav nav-justified my-5">
 					<a class="nav-link-prev nav-item nav-link d-none rounded-left" href="/Home/BlogList">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
 					<a class="nav-link-next nav-item nav-link rounded" href="/Home/BlogList">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
