--- a/Blog/Views/Account/Error.cshtml
+++ b/Blog/Views/Account/Error.cshtml
@@ -1,5 +1,8 @@
 ﻿@model LoginVM
-
+@{
+    Layout = "_Layout";
+   
+}
 @if (ViewBag.ErrorTitle != null)
 {
 	<h1 style="color:orangered;"><i>@ViewBag.ErrorTitle</i></h1>
