--- a/Blog/Views/Account/Register.cshtml
+++ b/Blog/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Blog.Models.ViewModel.RegisterVM
 
 @{
+    Layout="_Layout";
     ViewData["Title"] = "Register";
 }
 
@@ -54,7 +55,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Home/Index">Back to List</a>
 </div>
 
 @section Scripts {
