--- a/Blog/Views/Account/ForgotPassword.cshtml
+++ b/Blog/Views/Account/ForgotPassword.cshtml
@@ -1,5 +1,8 @@
 ﻿@model LoginVM
-
+@{
+    Layout = "_Layout";
+  
+}
 @if (TempData["Message"] != null)
 {
 	<h3 style="color:orangered;"><i>@TempData["Message"]</i></h3>
